# RADACUDA

./: .editorconfig  .gitmodules  CMakeLists.txt  RADACUDA.sln
RADACUDA/: RADACUDA.vcxproj  RADACUDA.vcxproj.filters  hittable.h  main.cpp  material.h  node.h  primitives.h  ray.h  show0.plt  utility.h  vec3.h
RADACUDA/sciplot/sciplot/: sciplot.hpp
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  gnuplot.h  hittable.h  main.cpp  material.h  node.h  primitives.h  ray.cc  ray.h  rectangle.cc  rectangle.h  utility.cc  utility.h  vec3.cc  vec3.h
test/: CMakeLists.txt  vec3_test.cc
